--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "6.1",
+    "react-router-dom": "^6.10.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
