--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "redirects": [
-    {
-      "source": "/(.*)",
-      "destination": "/",
-      "permanent": false
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
